# 02a._Data_parsing_server_part_2

./: README.md
js-server-app/: README.md  index.js  package-lock.json  package.json
js-server-app/src/endpoints/: csvEndpoint.js  jsonEndpoint.js  txtEndpoint.js  xmlEndpoint.js  yamlEndpoint.js
js-server-app/src/parser_module/: csvParser.js  jsonParser.js  person.js  txtParser.js  xmlParser.js  yamlParser.js
py-server-app/: README.md  main.py
py-server-app/src/endpoints/: csv_endpoint.py  json_endpoint.py  text_endpoint.py  xml_endpoint.py  yaml_endpoint.py
py-server-app/src/parser_module/: csv_parser.py  json_parser.py  person.py  text_parser.py  xml_parser.py  yaml_parser.py
py_server_a/: README.md  main.py  pyproject.toml
py_server_a/src/endpoints/: __init__.py  csv_endpoint.py  json_endpoint.py  text_endpoint.py  xml_endpoint.py  yaml_endpoint.py
py_server_a/src/parser_module/: __init__.py  json_parser.py  xml_parser.py
